fixing light/dark mode

--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -84,6 +84,10 @@
 .theme-toggle-container {
     position: center;
     top: 10px;
+    background: #333;
+    color: #fff;
+    border: 1px solid #ffffff;
+    
 }
 
 /* about section */
